--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/WidgetPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/WidgetPage.xaml
@@ -63,7 +63,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" >
-            <TextBlock x:Name="pageTitle" Style="{StaticResource PageTitleStyle}"/>
+            <TextBlock x:Name="pageTitle" Style="{StaticResource PageTitle_Style}"/>
         </Grid>
         
         <!--shipin-->
