--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/PhotoEditPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/PhotoEditPage.xaml
@@ -85,7 +85,7 @@
 
     </Page.Resources>
 
-    <Page.BottomAppBar>
+    <!--<Page.BottomAppBar>
         <CommandBar x:Name="bottomAppBar" Background="#ffff7e7e" Visibility="Visible">
             <AppBarButton Label="确认" Click="ok_Click">
                 <AppBarButton.Icon>
@@ -93,7 +93,7 @@
                 </AppBarButton.Icon>
             </AppBarButton>
         </CommandBar>
-    </Page.BottomAppBar>
+    </Page.BottomAppBar>-->
 
     <Grid Background="Gray">
 
@@ -109,7 +109,7 @@
                 <VisualState x:Name="vsSizeMenuPopupHidden"/>
                 <VisualState x:Name="vsSizeMenuPopupShown">
                     <Storyboard>
-                        <DoubleAnimation Duration="0" To="-72" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="popupSizeMenu" d:IsOptimized="True"/>
+                        <DoubleAnimation Duration="0" To="-74" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="popupSizeMenu" d:IsOptimized="True"/>
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.IsHitTestVisible)" Storyboard.TargetName="popupPanel">
                             <DiscreteObjectKeyFrame KeyTime="0">
                                 <DiscreteObjectKeyFrame.Value>
@@ -118,8 +118,34 @@
                             </DiscreteObjectKeyFrame>
                         </ObjectAnimationUsingKeyFrames>
                         <DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="popupMask" d:IsOptimized="True"/>
-                        <DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="selectedSizeText" d:IsOptimized="True"/>
-                        <DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="dismissSizeMenuText" d:IsOptimized="True"/>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Control.FontFamily)" Storyboard.TargetName="btnOK">
+                        	<DiscreteObjectKeyFrame KeyTime="0">
+                        		<DiscreteObjectKeyFrame.Value>
+                        			<FontFamily>Global User Interface</FontFamily>
+                        		</DiscreteObjectKeyFrame.Value>
+                        	</DiscreteObjectKeyFrame>
+                        </ObjectAnimationUsingKeyFrames>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnOK">
+                        	<DiscreteObjectKeyFrame KeyTime="0">
+                        		<DiscreteObjectKeyFrame.Value>
+                        			<Visibility>Collapsed</Visibility>
+                        		</DiscreteObjectKeyFrame.Value>
+                        	</DiscreteObjectKeyFrame>
+                        </ObjectAnimationUsingKeyFrames>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnCrop">
+                        	<DiscreteObjectKeyFrame KeyTime="0">
+                        		<DiscreteObjectKeyFrame.Value>
+                        			<Visibility>Collapsed</Visibility>
+                        		</DiscreteObjectKeyFrame.Value>
+                        	</DiscreteObjectKeyFrame>
+                        </ObjectAnimationUsingKeyFrames>
+                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="btnCancelCrop">
+                        	<DiscreteObjectKeyFrame KeyTime="0">
+                        		<DiscreteObjectKeyFrame.Value>
+                        			<Visibility>Visible</Visibility>
+                        		</DiscreteObjectKeyFrame.Value>
+                        	</DiscreteObjectKeyFrame>
+                        </ObjectAnimationUsingKeyFrames>
                     </Storyboard>
                 </VisualState>
             </VisualStateGroup>
@@ -194,46 +220,42 @@
             <Grid x:Name="popupPanel" IsHitTestVisible="False">
                 <Rectangle x:Name="popupMask" Fill="#80000000" Opacity="0"/>
 
-                <!--edge shadow-->
                 <StackPanel x:Name="popupSizeMenu" 
-                        VerticalAlignment="Bottom" Margin="3,0,3,0"
+                        VerticalAlignment="Bottom" Margin="2,0,2,0"
                         Background="#ffffffff" RenderTransformOrigin="0.5,0.5">
                     <StackPanel.RenderTransform>
                         <CompositeTransform TranslateY="325"/>
                     </StackPanel.RenderTransform>
                     <Border Style="{StaticResource PhotoEditPage_PopMenuContainer_Style}" Tapped="sizeMenuItem_Tapped" Tag="origin">
-                        <TextBlock Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="原图"/>
+                        <TextBlock x:Name="menuItem_origin" Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="原图"/>
                     </Border>
                     <Border Style="{StaticResource PhotoEditPage_PopMenuContainer_Style}" Tapped="sizeMenuItem_Tapped" Tag="fitApp">
-                        <TextBlock Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="适应软件"/>
+                        <TextBlock x:Name="menuItem_fitApp" Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="适应软件"/>
                     </Border>
                     <Border Style="{StaticResource PhotoEditPage_PopMenuContainer_Style}" Tapped="sizeMenuItem_Tapped" Tag="arbitrary">
-                        <TextBlock Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="任意"/>
+                        <TextBlock x:Name="menuItem_arbitrary" Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="任意"/>
                     </Border>
                     <Border Style="{StaticResource PhotoEditPage_PopMenuContainer_Style}" Tapped="sizeMenuItem_Tapped" Tag="1x1">
-                        <TextBlock Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="1X1"/>
+                        <TextBlock x:Name="menuItem_1x1" Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="1X1"/>
                     </Border>
                     <Border Style="{StaticResource PhotoEditPage_PopMenuContainer_Style}" Tapped="sizeMenuItem_Tapped" Tag="3x4">
-                        <TextBlock Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="3X4"/>
+                        <TextBlock x:Name="menuItem_3x4" Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="3X4"/>
                     </Border>
                 </StackPanel>
             </Grid>
 
-            <Border Style="{StaticResource PhotoEditPage_PopMenuContainer_Style}" 
-                VerticalAlignment="Bottom" Margin="3,0,3,2"
-                Tapped="selectedSize_Tapped">
-                <Grid>
-                    <TextBlock x:Name="selectedSizeText" Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="原图"/>
-                    <TextBlock x:Name="dismissSizeMenuText" Style="{StaticResource PhotoEditPage_PopMenuText_Style}" Text="取消" Opacity="0"/>
-                </Grid>
-            </Border>
-
         </Grid>
 
         <sharedControl:AppBar>
-            <sharedControl:BarButton Icon="/Assets/Images/AppBar/AppBarOK.png" 
-                                     Text="确认"
+            <sharedControl:BarButton x:Name="btnOK" Icon="/Assets/Images/AppBar/AppBarOK.png" 
+                                     Text="确认" Margin="10,0,10,0"
                                      Click="ok_Click"/>
+            <sharedControl:BarButton x:Name="btnCrop" Icon="/Assets/Images/AppBar/AppBarCrop.png" 
+                                     Text="裁剪" Margin="10,0,10,0"
+                                     Click="crop_Click"/>
+            <sharedControl:BarButton x:Name="btnCancelCrop" Icon="/Assets/Images/AppBar/AppBarCancel.png" 
+                                     Text="取消" Margin="10,0,10,0" Visibility="Collapsed"
+                                     Click="cancelCrop_Click"/>
         </sharedControl:AppBar>
 
     </Grid>
